choreupdate class naming
